syntax = "proto3";

package com.road.yishi.proto.campaign;

message NodeMsg {
  int32 position = 1;
  int32 type = 2;
  int32 templateId = 3;
}
