syntax = "proto3";

package com.road.yishi.proto.outcitywar;

message OutCityWarStateMsg {
  repeated int32 castleStateMsg = 1;
}
