syntax = "proto3";

package com.road.yishi.proto.powcard;

message Singlefightadd {
  int32 op = 1;
  int32 userid = 2;
  int32 CampType = 3;
  int32 add = 4;
}
